--- a/WebContent/html/resume.html
+++ b/WebContent/html/resume.html
@@ -4,60 +4,63 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <link rel="stylesheet" type="text/css" href="../css/resume.css">
+<link rel="icon" href="../image/hhh.jpg" type="image/x-icon"/>
 </head>
 <body>
-	<div class=class0>							<!-- 定义外部框架 -->
-		<div class=class1>          			 <!--定义顶部框  -->
-			<p id=a1>陈浩</p>
-			<p id=a2>18784020981</p>
-			<img src="../image/tel.png" id=a3 width="20px" height="20px"></img>
-			<p id=a4>个人简历</p>
-			<p id=a5>CH18784020981@163.com</p>
-			<img src="../image/mail.png" id=a6 width="20px" height="20px"></img>
-		</div>
+	<div>							<!-- 定义外部框架 -->
+		<header>         			 <!--定义顶部框  -->
+			<a href="maigua.html"> <b>陈浩</b></a>
+			<span>18784020981&nbsp;&nbsp;<img src="../image/tel.png"  width="1.25em" height="1.25em"></img></span>
+			<strong>个人简历</strong>
+			<span id=email>CH18784020981@163.com&nbsp;&nbsp;<img src="../image/mail.png"  width="1.25em" height="1.25em"></img></span>
+			<!-- <img src="../image/mail.png" id=a6 width="20px" height="20px"></img> -->
+		 
+		
+		</header>
 		
 			                              
-			<div class=class2>			<!-- 定义基本资料框架 -->
-			<p id=c1>PROFILE基本资料</p>
-			<p id=b2>我来自江苏南京，今年22岁，于2020年毕业于南京邮电大学人力资源管理专业，
-				在校期间我学会了如何高效的学习，专业知识成绩优秀，并且自学了编程。</p>
+			<bodyLeft>			<!-- 定义基本资料框架 -->
+			<p>PROFILE基本资料</p>
+			<i>我来自四川绵阳，今年22岁，于2020年毕业于南京邮电大学人力资源管理专业，
+				在校期间我学会了如何高效的学习，专业知识成绩优秀，并且自学了编程。</i>
 		<!-- 	<img src="../image/d1.jpg" id=d8></img> -->
-		</div>
-		<div class=class3>				<!-- 定义经历框架 -->
-			<p id=c1>EXPERIENCE经历</p>
-			<p id=e2>社团活动</p>
-			<p id=c3>大学期间积极参加社团活动，并学到很多知识</p>
-			<p class=c4>乒乓球比赛一等奖</p>
-			<p class=c4>象棋比赛二等奖</p>
-			<p class=c4>文科知识竞赛二等奖</p>
-			<p id=e2>实习实践经历</p>
-			<p class=c6>2016年在潼川公司销售实习</p>
-			<p class=c6>2017年在家乡调研实践</p>
-			<p class=c6>2018年暑假任家教</p>
-			</div>
-			<div class=class4>				<!--  定义头像框架-->
-			<img src="../image/d1.jpg" id=d1 width="150px" height="150px"></img>
-			</div>
-			<div class=class5>             <!-- 定义教育框架 -->
-			<p id=c1>EDUCATION教育</p>
-			<p id=e2>南京邮电大学</p>
-			<p id=e3>2016-2020</p>
-			<p id=e2>三台中学</p>
-			<p id=e3>2013-2016</p>
-			<p id=e2>建设中学</p>
-			<p id=e3>2010-2013</p>
-			</div>
-			<div class=class6>				<!-- 定义技能框架 -->
-			<p id=c1>SKILL技能</p>
-			<p id=e2>编程语言</p>
-			<p class=f3>-java/精通</p>
-			<p class=f3>-c语言/了解</p>
-			<p id=e2>个人技能</p>
-			<p class=f5>-Excle</p>
-			<p class=f5>-c1驾驶</p>
-			<p class=f5>-普通话二级</p>
-		</div>
-		<p id=xian></p>
+		</bodyLeft>
+		<footLeft>				<!-- 定义经历框架 -->
+			<p>EXPERIENCE经历</p>
+			<em>社团活动</em>
+			<i>大学期间积极参加社团活动，并学到很多知识</i>
+			<em>比赛竞赛</em>
+			<i>乒乓球比赛一等奖</i>
+			<i>象棋比赛二等奖</i>
+			<i>文科知识竞赛二等奖</i>
+			<em>实习实践经历</em>
+			<i>2016年在潼川公司销售实习</i>
+			<i>2017年在家乡调研实践</i>
+			<i>2018年暑假任家教</i>
+			</footLeft>
+			<bodyRight>				<!--  定义头像框架-->
+			<a href="../image/hhh.jpg"><img src="../image/lanqiu.gif" class=photo width=""></img></a>
+			</bodyRight>
+			<footRightT>             <!-- 定义教育框架 -->
+			<p>EDUCATION教育</p>
+			<em>南京邮电大学</em>
+			<i>2016-2020</i>
+			<em>三台中学</em>
+			<i>2013-2016</i>
+			<em>建设中学</em>
+			<i>2010-2013</i>
+			</footRightT>
+			<footRightB>				<!-- 定义技能框架 -->
+			<p>SKILL技能</p>
+			<em>编程语言</em>
+			<i>-java/精通</i>
+			<i>-c语言/了解</i>
+			<em>个人技能</em>
+			<i>-Excle</i>
+			<i>-c1驾驶</i>
+			<i>-普通话二级</i>
+		</footRightB>
+		<p class=xian></p>
 		</div>
 </body>
 </html>
